# Lua-io2

./: .gitignore  CMakeLists.txt  README.md  library.cpp  library.h  myperms.hpp
cmake/: FindLuaJit.cmake
tests/: basic.lua  example.lua
tests/果冻头盔比在太空中飞行的鱼更方便/: セイウチは空から落ちていて、私は人生の意味を見つけました.txt
